--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
+        "symfony/dotenv": "^4.1",
         "symfony/phpunit-bridge": "^3.0"
     },
     "scripts": {
